Joomla! 3, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

04-Jul-2013 Jean-Marie Simonet
 # [#31138] Correct the Bug after #31034. Thanks Tobias Zulauf and Peter Wiseman

03-Jul-2013 Jean-Marie Simonet
 # [#31321] Fixed issue with tooltip text not being escaped when no title is given. Thanks Peter van Westen
 # [#31322] Made title of search boxes show as tooltip. Thanks Peter van Westen
 ^ [#31214] Added method to generate the check-all checkbox in grids. Thanks Peter van Westen
 # [#31310] Password rule warning in 5.3. Thanks Elin Waring
 # [#31220] Invalid Feed URL for Module Feed Display causes generation of page "The requested page cannot be found". Thanks Elin Waring 
 # [#31293] Allow all password error messages to be shown. Thanks George Wilson.
 # [#31256] Commit for issue 30966 garbles HTML for emails in forms. Thanks George Wilson.

01-Jul-2013 Jean-Marie Simonet
 ^ [#30849] Show alias for menu items on menu assignement. Thanks David Hurley
 $ Updating Installation lang files: ar-AA, fi-FI, ja-JP, sy-IQ, uk-UA
 # [#31229] Fixed: DebugGroup not working. Thanks Peter van Westen
 # [#31066] Cleanup Tag Storing. Thanks Nicolas Dionysopoulos and Elin Waring.
 # [#31280] Loadmodule support for htmlspecialchars in title. Thanks Peter Wiseman

01-Jul-2013 Elin Waring
 # [#31298] Drop downs on menu item edit are broken. Corrects #31060.

30-Jun-2013 Jean-Marie Simonet
 # [#31188] Fixed issue with not being able to select color white. Thanks Peter van Westen
 # [#31098] *UX Suggestions for Batch button

29-Jun-2013 Jean-Marie Simonet
 $ [#27307] English only: weblink or web link. Web Link or Web link. Thanks George Wilson
 # [#31285] Joomla Installation is broken with the current git!

28-Jun-2013 Jean-Marie Simonet
 # Correcting #31772